--- a/Palette/Palette.csproj
+++ b/Palette/Palette.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\ColorTheory.cs" />
     <Compile Include="Models\DelegateCommand.cs" />
     <Compile Include="Models\FileHandler.cs" />
     <Compile Include="Models\ImageInfo.cs" />
